[package]
name = "eggspire"
version = "1.0.3"
authors = ["Andreas Innerlohninger <innerand@nxa.at>"]
publish = false
edition = "2018"

[dependencies]
clap = "2.27.1"
tokio="0.1.13"

futures="0.1.18"
chrono = "0.4.0"

log = "0.4.1"
env_logger = "0.5.3"

serde= "1.0.27"
serde_derive = "1.0.27"
toml = "0.4.5"

[dependencies.egg-mode]
# Upstream has a bug, set back to crate egg-mode if fixed
# (https://github.com/QuietMisdreavus/twitter-rs/pull/54)
git = "https://github.com/innerand/twitter-rs"
rev = "a9fe0e1cd40afe575efa1a00211664044a89c841"
